--- a/ebuy-content/pom.xml
+++ b/ebuy-content/pom.xml
@@ -15,6 +15,17 @@
         <module>ebuy-content-interface</module>
         <module>ebuy-content-service</module>
     </modules>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <path>/</path>
+                    <port>8083</port>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
