--- a/ebuy-content/ebuy-content-interface/pom.xml
+++ b/ebuy-content/ebuy-content-interface/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>ebuy-content-interface</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.ebuy</groupId>
+            <artifactId>ebuy-manager-pojo</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
