--- a/ebuy-manager/ebuy-manager-interface/pom.xml
+++ b/ebuy-manager/ebuy-manager-interface/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>ebuy-manager-interface</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ebuy</groupId>
+            <artifactId>ebuy-manager-pojo</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
