--- a/ebuy-order/pom.xml
+++ b/ebuy-order/pom.xml
@@ -16,5 +16,23 @@
         <module>ebuy-order-service</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ebuy</groupId>
+            <artifactId>ebuy-common</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <path>/</path>
+                    <port>8090</port>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
