--- a/ebuy-search/ebuy-search-interface/pom.xml
+++ b/ebuy-search/ebuy-search-interface/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ebuy-search-interface</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ebuy</groupId>
+            <artifactId>ebuy-manager-pojo</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
