--- a/ebuy-search-web/src/main/resources/log4j.properties
+++ b/ebuy-search-web/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Define the root logger with appender file
-log = F:/workspace/ebuy-parent/log
+log = \
+  /Users/zhouxinghang/workspace/myworkspace/ebuy
 #\u5B9A\u4E49LOG\u8F93\u51FA\u7EA7\u522B\u3001\u8F93\u51FA\u5230\u63A7\u5236\u53F0\u3001\u6587\u4EF6
 log4j.rootLogger = INFO,ERROR,STDOUT, FILE
 
