--- a/ebuy-search/ebuy-search-service/src/main/resources/properties/db.properties
+++ b/ebuy-search/ebuy-search-service/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://60.205.224.98:3306/ebuy?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/ebuy?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=930624zhou
