--- a/ebuy-manager/ebuy-manager-service/src/main/resources/properties/manage.properties
+++ b/ebuy-manager/ebuy-manager-service/src/main/resources/properties/manage.properties
@@ -1,6 +1,6 @@
-manage.host = localhost
+manage.host = image.zhouxinghang.com
 manage.port = 21
 manage.username = ftpuser
 manage.password = 123456
-manage.basePath = /home/ftpuser
-manage.filePath = /
+manage.basePath = /pub
+manage.filePath = /image
