--- a/ebuy-common/pom.xml
+++ b/ebuy-common/pom.xml
@@ -68,6 +68,18 @@
             <artifactId>servlet-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <!--Swagger2依赖-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
