--- a/ebuy-portal-web/pom.xml
+++ b/ebuy-portal-web/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.ebuy</groupId>
             <artifactId>ebuy-manager-pojo</artifactId>
             <version>2.0-SNAPSHOT</version>
