用户注册新增email，email通过SPringBoot微服务发送，利用rabbitMq接收，邮箱是激活链接，新增邮箱激活用户功能

--- a/ebuy-sso/ebuy-sso-service/pom.xml
+++ b/ebuy-sso/ebuy-sso-service/pom.xml
@@ -80,6 +80,17 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <!--rabbit-->
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>1.6.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
