--- a/ebuy-sso/ebuy-sso-service/src/main/resources/log4j.properties
+++ b/ebuy-sso/ebuy-sso-service/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Define the root logger with appender file
 log = /Users/zhouxinghang/workspace/myworkspace/ebuy/log
 #\u5B9A\u4E49LOG\u8F93\u51FA\u7EA7\u522B\u3001\u8F93\u51FA\u5230\u63A7\u5236\u53F0\u3001\u6587\u4EF6
-log4j.rootLogger = INFO,ERROR,STDOUT, FILE
+log4j.rootLogger = DEBUG,INFO,ERROR,STDOUT, FILE
 
 # \u5B9A\u4E49\u6587\u4EF6file appender \u8BBE\u7F6E\u6587\u4EF6\u5927\u5C0F\u548C\u4E2A\u6570 \u4EE5\u53CA\u6587\u4EF6\u4F4D\u7F6E
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
@@ -19,5 +19,11 @@ log4j.appender.FILE.layout.conversionPattern=%m%n
 #\u5B9A\u4E49\u65E5\u5FD7\u8F93\u51FA\u76EE\u7684\u5730\u4E3A\u63A7\u5236\u53F0
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}%m%n
+
+log4j.logger.java.sql.ResultSet=INFO    
+log4j.logger.org.apache=INFO  
+log4j.logger.java.sql.Connection=DEBUG    
+log4j.logger.java.sql.Statement=DEBUG    
+log4j.logger.java.sql.PreparedStatement=DEBUG
 
 
