--- a/ebuy-sso-web/src/main/webapp/WEB-INF/web.xml
+++ b/ebuy-sso-web/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,16 @@
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+	<filter>
+		<filter-name>cat-filter</filter-name>
+		<filter-class>com.dianping.cat.servlet.CatFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>cat-filter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+	</filter-mapping>
 	<!-- post乱码过滤器 -->
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
@@ -35,5 +45,7 @@
 		<servlet-name>ebuy-sso-web</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+
 	
 </web-app>
