--- a/ebuy-sso-web/pom.xml
+++ b/ebuy-sso-web/pom.xml
@@ -98,6 +98,19 @@
             <artifactId>spring-beans</artifactId>
             <version>4.3.13.RELEASE</version>
         </dependency>
+        <!--cat-->
+        <dependency>
+            <groupId>com.dianping.cat</groupId>
+            <artifactId>cat-client</artifactId>
+            <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
